Building Base Website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>This is the landing page</h1>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<link rel="stylesheet" href="styles.css">
+		<script type="module" src="script.js"></script>
+
+	<body>
+		<nav>
+			<h4> 💡📝DSA Assignment Solutions(Java)📝💡 </h4>
+		</nav>
+
+		<main>
+			<button type="button" class="collapsible">Flowchart and Pseudocode</button>
+			<div class="content">
+				<p>soon</p>
+			</div>
+		</main>
+
+	</body>
+
+	<footer>
+		<div class="ft">
+			<p>❤️You Can Contribute Too❤️</p>
+		</div>
+	</footer>
+
+</html>
