--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="styles.css">
 		<script type="module" src="script.js"></script>
 
@@ -13,7 +14,14 @@
 		<main>
 			<button type="button" class="collapsible">Flowchart and Pseudocode</button>
 			<div class="content">
-				<p>soon</p>
+				<ul style="line-height:180%">
+					<li><a href="#" class="hov" >Questions</a></li>
+					<li><a href="#" class="hov" >Q1 Solution</a></li>
+					<li><a href="#" class="hov" >Q2 Solution</a></li>
+					<li><a href="#" class="hov" >Q3 Solution</a></li>
+					<li><a href="#" class="hov" >Q4 Solution</a></li>
+					<li><a href="#" class="hov" >Q5 Solution</a></li>
+				</ul>
 			</div>
 		</main>
 
