--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 			<button type="button" class="collapsible">Flowchart and Pseudocode</button>
 			<div class="content">
 				<ul style="line-height:180%">
-					<li><a href="#" class="hov" >Questions</a></li>
-					<li><a href="#" class="hov" >Q1 Solution</a></li>
-					<li><a href="#" class="hov" >Q2 Solution</a></li>
-					<li><a href="#" class="hov" >Q3 Solution</a></li>
-					<li><a href="#" class="hov" >Q4 Solution</a></li>
-					<li><a href="#" class="hov" >Q5 Solution</a></li>
+					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/00%20Questions.md" class="hov" >Questions</a></li>
+					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q1%20Solution.md" class="hov" >Q1 Solution</a></li>
+					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q2%20Solution.md" class="hov" >Q2 Solution</a></li>
+					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q3%20Solution.md" class="hov" >Q3 Solution</a></li>
+					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q4%20Solution.md" class="hov" >Q4 Solution</a></li>
+					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q5%20Solution.md" class="hov" >Q5 Solution</a></li>
 				</ul>
 			</div>
 		</main>
