--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
 		<script type="module" src="script.js"></script>
 
 	<body>
-		<nav>
-			<h4> 💡📝DSA Assignment Solutions(Java)📝💡 </h4>
-		</nav>
+		<div class="nav">
+			<p> <b>📝DSA Assignment Solutions(Java)📝💡 </b></p>
+		</div>
 
 		<main>
-			<button type="button" class="collapsible">Flowchart and Pseudocode</button>
-			<div class="content">
-				<ul style="line-height:180%">
-					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/00%20Questions.md" class="hov" >Questions</a></li>
-					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q1%20Solution.md" class="hov" >Q1 Solution</a></li>
-					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q2%20Solution.md" class="hov" >Q2 Solution</a></li>
-					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q3%20Solution.md" class="hov" >Q3 Solution</a></li>
-					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q4%20Solution.md" class="hov" >Q4 Solution</a></li>
-					<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q5%20Solution.md" class="hov" >Q5 Solution</a></li>
-				</ul>
+			<div class="main">
+				<div class="content-wrapper">
+					<details>
+						<summary>Flowchart and Pseudocode</summary>
+						<ul class="answer" style="line-height:180%">
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/00%20Questions.md" class="hov">Questions</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q1%20Solution.md" class="hov">Q1 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q2%20Solution.md" class="hov">Q2 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q3%20Solution.md" class="hov">Q3 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q4%20Solution.md" class="hov">Q4 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q5%20Solution.md" class="hov">Q5 Solution</a></li>
+						</ul>
+					</details>
+				</div>
 			</div>
 		</main>
 
