adding first java

--- a/index.html
+++ b/index.html
@@ -17,12 +17,28 @@
 					<details>
 						<summary>Flowchart and Pseudocode</summary>
 						<ul class="answer" style="line-height:180%">
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/00%20Questions.md" class="hov">Questions</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q1%20Solution.md" class="hov">Q1 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q2%20Solution.md" class="hov">Q2 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q3%20Solution.md" class="hov">Q3 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q4%20Solution.md" class="hov">Q4 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q5%20Solution.md" class="hov">Q5 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/00%20Questions.md">Questions</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q1%20Solution.md">Q1 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q2%20Solution.md">Q2 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q3%20Solution.md">Q3 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q4%20Solution.md">Q4 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q5%20Solution.md">Q5 Solution</a></li>
+						</ul>
+					</details>
+
+					<details>
+						<summary>First Java</summary>
+						<ul class="answer" style="line-height:180%">
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/00%20Questions.md">Questions</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q1_Solution.java">Q1 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q2_Solution.java">Q2 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q3_Solution.java">Q3 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q4_Solution.java">Q4 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q5_Solution.java">Q5 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q6_Solution.java">Q6 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q7_Solution.java">Q7 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q8_Solution.java">Q8 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q9_Solution.java">Q9 Solution</a></li>
 						</ul>
 					</details>
 				</div>
