updating style n links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="styles.css">
@@ -16,19 +17,19 @@
 				<div class="content-wrapper">
 					<details>
 						<summary>Flowchart and Pseudocode</summary>
-						<ul class="answer" style="line-height:180%">
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/00%20Questions.md">Questions</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q1%20Solution.md">Q1 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q2%20Solution.md">Q2 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q3%20Solution.md">Q3 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q4%20Solution.md">Q4 Solution</a></li>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/Flow%20Of%20Program/Q5%20Solution.md">Q5 Solution</a></li>
+						<ul class="answer" style="line-height:150%">
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/00%20Flow%20Of%20Program/00%20Questions.md" class="hov">Questions</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/00%20Flow%20Of%20Program/Q1%20Solution.md" class="hov">Q1 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/00%20Flow%20Of%20Program/Q2%20Solution.md" class="hov">Q2 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/00%20Flow%20Of%20Program/Q3%20Solution.md" class="hov">Q3 Solution</a></li>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/00%20Flow%20Of%20Program/Q4%20Solution.md" class="hov">Q4 Solution</a></li>
+							<li><a href="hhttps://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/00%20Flow%20Of%20Program/Q5%20Solution.md" class="hov">Q5 Solution</a></li>
 						</ul>
 					</details>
 
 					<details>
 						<summary>First Java</summary>
-						<ul class="answer" style="line-height:180%">
+						<ul class="answer" style="line-height:150%">
 							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/00%20Questions.md">Questions</a></li>
 							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q1_Solution.java">Q1 Solution</a></li>
 							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q2_Solution.java">Q2 Solution</a></li>
@@ -41,6 +42,7 @@
 							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q9_Solution.java">Q9 Solution</a></li>
 						</ul>
 					</details>
+
 				</div>
 			</div>
 		</main>
