adding new sols

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 						</ul>
 					</details>
 
+					<details>
+						<summary>Conditionals Loops</summary>
+						<ul class="answer" style="line-height:150%">
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/00%20Questions.md">Questions</a></li>
+							<details>
+								<summary>Basics</summary>
+							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q1_Solution.java">Q1 Solution</a></li>
+						</ul>
+					</details>
 				</div>
 			</div>
 		</main>
