adding Conditionals basic solutions

--- a/index.html
+++ b/index.html
@@ -49,7 +49,34 @@
 							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/00%20Questions.md">Questions</a></li>
 							<details>
 								<summary>Basics</summary>
-							<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/01%20First%20Java/Q1_Solution.java">Q1 Solution</a></li>
+								<ul class="answer" style="line-height:150%">
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q01_Sol.java">Q1 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q02_Sol.java">Q2 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q03_Sol.java">Q3 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q04_Sol.java">Q4 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q05_Sol.java">Q5 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q06_Sol.java">Q6 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q07_Sol.java">Q7 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q08_Sol.java">Q8 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q09_Sol.java">Q9 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q10_Sol.java">Q10 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q11_Sol.java">Q11 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q12_Sol.java">Q12 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q13_Sol.java">Q13 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q14_Sol.java">Q14 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q15_Sol.java">Q15 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q16_Sol.java">Q16 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q17_Sol.java">Q17 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q18_Sol.java">Q18 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q19_Sol.java">Q19 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q20_Sol.java">Q20 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q21_Sol.java">Q21 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q22_Sol.java">Q22 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q23_Sol.java">Q23 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q24_Sol.java">Q24 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q25_Sol.java">Q25 Solution</a></li>
+									<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Extra_Sol_1.java">Extra Solution</a></li>
+								</ul>
 						</ul>
 					</details>
 				</div>
