--- a/index.html
+++ b/index.html
@@ -78,6 +78,31 @@
 										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Basic_Q25_Sol.java">Q25 Solution</a></li>
 										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Basic/Extra_Sol_1.java">Extra Solution</a></li>
 									</ul>
+								</details>
+								<details>
+									<summary>Basics</summary>
+									<ul class="answer" style="line-height:150%">
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q1_Sol.java">Q1 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q2_Sol.java">Q2 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q3_Sol.java">Q3 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q4_Sol.java">Q4 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q5_Sol.java">Q5 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q6_Sol.java">Q6 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q7_Sol.java">Q7 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q8_Sol.java">Q8 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q9_Sol.java">Q9 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q10_Sol.java">Q10 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q11_Sol.java">Q11 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q12_Sol.java">Q12 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q13_Sol.java">Q13 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q14_Sol.java">Q14 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q15_Sol.java">Q15 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q16_Sol.java">Q16 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q17_Sol.java">Q17 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q18_Sol.java">Q18 Solution</a></li>
+										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q19_Sol.java">Q19 Solution</a></li>
+									</ul>
+								</details>
 							</ul>
 						</details>
 					</div>
