--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									</ul>
 								</details>
 								<details>
-									<summary>Basics</summary>
+									<summary>Intermediate</summary>
 									<ul class="answer" style="line-height:150%">
 										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q1_Sol.java">Q1 Solution</a></li>
 										<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/02%20Conditionals%20Loops/Intermediate/Interm_Q2_Sol.java">Q2 Solution</a></li>
