--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 								</details>
 							</ul>
 						</details>
+						<details>
+							<summary>Functions & Methods</summary>
+							<ul class="answer" style="line-height:150%">
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/00%20Questions.md">Questions</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q1_Sol.java">Q1 Solution</a></li>
+							</ul>
+						</details>
 					</div>
 				</div>
 
