adding new sols

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
 							<ul class="answer" style="line-height:150%">
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/00%20Questions.md">Questions</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q1_Sol.java">Q1 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q2_Sol.java">Q2 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q3_Sol.java">Q3 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q4_Sol.java">Q4 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q5_Sol.java">Q5 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q6_Sol.java">Q6 Solution</a></li>
 							</ul>
 						</details>
 					</div>
