--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q4_Sol.java">Q4 Solution</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q5_Sol.java">Q5 Solution</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q6_Sol.java">Q6 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q7_Sol.java">Q7 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q8_Sol.java">Q8 Solution</a></li>
 							</ul>
 						</details>
 					</div>
