--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q6_Sol.java">Q6 Solution</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q7_Sol.java">Q7 Solution</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q8_Sol.java">Q8 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q9_Sol.java">Q9 Solution</a></li>
 							</ul>
 						</details>
 					</div>
