--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q7_Sol.java">Q7 Solution</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q8_Sol.java">Q8 Solution</a></li>
 								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q9_Sol.java">Q9 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q10_Sol.java">Q10 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q12_Sol.java">Q12 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q13_Sol.java">Q13 Solution</a></li>
+								<li><a href="https://github.com/Soumajit-Roy/DSA-Assignment-Solution/blob/main/03%20Functions%20%26%20Methods/Q14_Sol.java">Q14 Solution</a></li>
 							</ul>
 						</details>
 					</div>
